@@ -1,3 +1,8 @@
+1999-07-16  lav
+
+	* search.cc: add $n and $x search modifiers for numeric and hex mode.
+	  E.g. search for `$n 0x32 0x35 0x36' or `$x 32 35 36'.
+
 1999-07-12  lav
 
 	* search.cc: specify correct search limit in block replace (#) mode;
